# TRACE-ATS

./: .gitignore  README.md  dummy_resume.txt  pyproject.toml
JD/: AI_Engineer_Fresher.txt  AI_Engineer_NonFresher.txt  Blockchain_Fresher.txt  Blockchain_NonFresher.txt  Data_Analyst_Fresher.txt  Data_Analyst_NonFresher.txt  Frontend_Fresher.txt  Frontend_NonFresher.txt  FullStack_Fresher.txt  FullStack_NonFresher.txt  ML_Engineer_Fresher.txt  ML_Engineer_NonFresher.txt  UIUX_Fresher.txt  UIUX_NonFresher.txt  ai-analyst-job-description.txt  ai-architect-job-description.txt  ai-auditor-job-description.txt  ai-product-manager-job-description.txt  ai-strategist-job-description.txt  ai-trainer-job-description.txt  analytics-manager-job-description.txt  android-developer-job-description.txt  android-engineer-job-description.txt  application-developer-job-description.txt  application-engineer-job-description.txt  back-end-developer-job-description.txt  backend-javascript-developer-job-description.txt  bi-consultant-job-description.txt  business-analyst-job-description.txt  business-operations-manager-job-description.txt  chief-information-officer-cio-job-description.txt  chief-information-security-officer-job-description.txt  cloud-architect-job-description.txt  cloud-engineer-job-description.txt  computer-engineer-job-description.txt  computer-science-job-description.txt  computer-security-specialist-job-description.txt  computer-technician-job-description.txt  cto-chief-technology-officer-job-description.txt  cyber-security-specialist-job-description.txt  (+67 more)
backend/: main.py  (+3 more)
(+2 files in other folders)
