[project]
name = "trace-ats"
version = "0.1.0"
description = "TRACE-ATS: Resume scoring using Lexical, Semantic, Checklist, Effort & Anomaly signals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.34.0",
    "sentence-transformers>=3.4.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.2.0",
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "python-dotenv>=1.2.2",
    "watchdog>=6.0.0",
]
